Cut Acl.evalAcl() into smaller functions